--- a/webservice/Dockerfile
+++ b/webservice/Dockerfile
@@ -2,7 +2,8 @@ FROM node:latest
 EXPOSE 4000
 WORKDIR /app
 # for docker-compose the source must be relative to the project root
-COPY ./webservice .
+# COPY ./webserver .
+COPY . .
 RUN npm install
 # CMD ["node", "./src/index.js"]
 CMD ["npm", "run", "dev"]
